# cncvis

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  REFACTOR.md  api.c  api.h  assembly.c  assembly.h  cncvis.h  cncvis_test.c  config.c  function_map.json  generate_function_map.py  test_cncvis.c  utils.c  utils.h
machines/meca500/: config.xml
tinygl/: AGENTS.md  CMakeLists.txt  DESIGN_GUIDE.md  GL11_FEATURES.md  GL12_FEATURES.md  LIMITATIONS  Makefile  PITFALLS.md  README.md
tinygl/Raw_Demos/: CMakeLists.txt  benchmark.c  gears.c  t2i.c
tinygl/SDL_Examples/: CMakeLists.txt  game.c  gears.c  helloworld.c  menu.c  model.c  texture.c
tinygl/include/: CMakeLists.txt  ktx_loader.h  lvgl_bridge.h  tinygl_api.h  zbuffer.h  zfeatures.h
tinygl/include-demo/: 3dMath.h  api_audio.h  chad_math.h  chade.h  chadphys.h  lockstepthread.h  tobjparse.h
tinygl/include/GL/: gl.h  tinygl_ext.h
tinygl/src/: CMakeLists.txt  api.c  arrays.c  clear.c  clip.c  evaluators.c  extensions.c  fog.c  font8x8_basic.h  get.c  gl_evaluators.h  gl_extensions.h  gl_fog.h  gl_init.h  gl_lighting.h  gl_raster.h  gl_selection.h  gl_state.h  gl_texture.h  gl_utils.h  gl_vertex.h  glu.c  init.c  internal.h  ktx_loader.c  light.c  lighting.c  list.c  lockstepthread.c  lockstepthread.h  lvgl_bridge.c  matrix.c  memory.c  misc.c  opinfo.h  profiling.c  raster.c  select.c  selection.c  state.c  (+12 more)
tinygl/tests/: CMakeLists.txt  basic.c  bench_cubes.c  bgr.c  colored.c  drawelements.c  drawrange.c  full_gl.c  gears.c  red.ktx  textured.c
