add_executable(tgl_unit_basic basic.c)
target_include_directories(tgl_unit_basic PRIVATE ../include ../src)
target_link_libraries(tgl_unit_basic tinygl ${M_LIBRARY})
add_test(NAME tinygl_basic COMMAND tgl_unit_basic)

add_executable(tgl_unit_colored colored.c)
target_include_directories(tgl_unit_colored PRIVATE ../include ../src)
target_link_libraries(tgl_unit_colored tinygl ${M_LIBRARY})
add_test(NAME tinygl_colored COMMAND tgl_unit_colored)

add_executable(tgl_unit_textured textured.c)
target_include_directories(tgl_unit_textured PRIVATE ../include ../src)
target_link_libraries(tgl_unit_textured tinygl ${M_LIBRARY})
add_test(NAME tinygl_textured COMMAND tgl_unit_textured)

add_executable(tgl_unit_bgr bgr.c)
target_include_directories(tgl_unit_bgr PRIVATE ../include ../src)
target_link_libraries(tgl_unit_bgr tinygl ${M_LIBRARY})
add_test(NAME tinygl_bgr COMMAND tgl_unit_bgr)

add_executable(tgl_unit_drawrange drawrange.c)
target_include_directories(tgl_unit_drawrange PRIVATE ../include ../src)
target_link_libraries(tgl_unit_drawrange tinygl ${M_LIBRARY})
add_test(NAME tinygl_drawrange COMMAND tgl_unit_drawrange)

add_executable(tgl_unit_drawelements drawelements.c)
target_include_directories(tgl_unit_drawelements PRIVATE ../include ../src)
target_link_libraries(tgl_unit_drawelements tinygl ${M_LIBRARY})
add_test(NAME tinygl_drawelements COMMAND tgl_unit_drawelements)

add_executable(tgl_unit_full full_gl.c)
target_include_directories(tgl_unit_full PRIVATE ../include ../src)
target_link_libraries(tgl_unit_full tinygl ${M_LIBRARY})
add_test(NAME tinygl_full COMMAND tgl_unit_full)

add_executable(tgl_unit_gears gears.c)
target_include_directories(tgl_unit_gears PRIVATE ../include ../src)
target_link_libraries(tgl_unit_gears tinygl ${M_LIBRARY})
add_test(NAME tinygl_gears COMMAND tgl_unit_gears)
configure_file(red.ktx ${CMAKE_CURRENT_BINARY_DIR}/red.ktx COPYONLY)
add_executable(tgl_unit_benchcubes bench_cubes.c)
target_include_directories(tgl_unit_benchcubes PRIVATE ../include ../src)
target_link_libraries(tgl_unit_benchcubes tinygl ${M_LIBRARY})
add_test(NAME tinygl_benchcubes COMMAND tgl_unit_benchcubes)
